examples/test/testpolicy8911.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8911
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key47: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value23
          key8: value22
      podSelector:
        matchLabels:
          key40: value23
          key32: value26
          key0: value46
